Rename annuaire collection into etablissements

--- a/server/tests/utils/fixtures/acceIndexResponse.html
+++ b/server/tests/utils/fixtures/acceIndexResponse.html
@@ -250,7 +250,7 @@
                             <img id="modal-option-selected-down" src="views/themes/default/img//arrow_down.png"
                                  title="descendre" alt="descendre">
                         </div>
-                        <div style="clear: both;"></div>
+                        <div style="clearAll: both;"></div>
                     </div>
                     <div>
                         <h5>Données complémentaires</h5>
@@ -262,7 +262,7 @@
                                 <input multiple type="hidden" id="option_type_zone_uai" name="option_type_zone_uai"
                                        placeholder="" class="input-xlarge" autocomplete="off" value="">
                             </div>
-                            <div style="clear: both;"></div>
+                            <div style="clearAll: both;"></div>
                         </div>
                         <div class="control-group" title="Spécificités">
                             <div style="padding-left:5px; width: 100px; float: left">
@@ -272,7 +272,7 @@
                                 <input multiple type="hidden" id="option_specificite_uai" name="option_specificite_uai"
                                        placeholder="" class="input-xlarge" autocomplete="off" value="">
                             </div>
-                            <div style="clear: both;"></div>
+                            <div style="clearAll: both;"></div>
                         </div>
                     </div>
                 </form>
